test/classes/diten/breakList.good
breakList.chpl:23: In function 'bar':
breakList.chpl:26: error: multiple overload sets are applicable to this call
breakList.chpl:6: note: the best-matching candidate is here
breakList.chpl:3: note: ... defined in this module
$CHPL_HOME/modules/standard/LinkedLists.chpl:nnnn: note: even though the candidate here is also available
$CHPL_HOME/modules/standard/LinkedLists.chpl:nnnn: note: ... defined in this module
breakList.chpl:26: note: use --no-overload-sets-checks to disable overload sets errors
